--- a/html/templates/buypage.html
+++ b/html/templates/buypage.html
@@ -8,8 +8,8 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <link rel="stylesheet" href="static/css/styles.css?v=1.0.1">
-        <script src="static/js/script.js?v=1.0.0"></script>
+        <link rel="stylesheet" href="html/css/styles.css?v=1.0.1">
+        <!-- <script src="static/js/script.js?v=1.0.0"></script> -->
     </head>
 
     <body>
