--- a/html/templates/buy.html
+++ b/html/templates/buy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Баланс</title>
+    <title>Купить алмазы</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -24,6 +24,8 @@
             </div>
 
             <div class="balance_main">
+
+                <!-- Форма для POST запроса  -->
                 <div class="balance_form">
                     <div>
                         Ваши алмазы:
@@ -31,13 +33,13 @@
                         <img class="diamond_icon"></img>
                         <span style="font-size: 300%">{{.Diamonds}}</span>
                     </div>
-                    <form action="/buy" id="buy_form">
-                        <div class="button" onclick="document.forms['buy_form'].submit()">
-                            <img class="diamond_icon"></img>
-                            <div class="text">Купить алмазы</div>
-                        </div>
+<!--                    <form action="/buy" id="buy_form">-->
+<!--                        <div class="button" onclick="document.forms['buy_form'].submit()">-->
+<!--                            <img class="diamond_icon"></img>-->
+<!--                            <div class="text">Купить алмазы</div>-->
+<!--                        </div>-->
 
-                    </form>
+<!--                    </form>-->
                 </div>
             </div>
         </div>
