Sending request to API and get intermediate response

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -104,8 +104,8 @@ html {
 }
 
 .buy_form {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .button{
