--- a/html/templates/purchase_success.html
+++ b/html/templates/purchase_success.html
@@ -30,7 +30,7 @@
                     </div>
                     <form action="/" id="return_form" method="POST">
                         <div class="button" onclick="document.forms['return_form'].submit()">
-                            <div class="text">Возврат на главную</div>
+                            <div class="text">Вернуться</div>
                         </div>
 
                     </form>
